feito ate a 4, 5 incompleta

--- a/01_nota0-10.html
+++ b/01_nota0-10.html
@@ -7,7 +7,11 @@
 
     //Entrada
 
-
+    let nota = Number(prompt(`Insira uma nota de 0 a 10:`));
+    while (nota >= 0 || nota <= 10){
+        nota = Number(prompt(`Insira uma nota de 0 a 10!!`));
+    }
+    console.log("aprovado")
     //Processamento
 
 
