--- a/02_usuarioSenha.html
+++ b/02_usuarioSenha.html
@@ -6,6 +6,13 @@
     */
 
     //Entrada
+    let user = prompt(`Insira o seu nome de usuario`);
+    let password = prompt(`Insira a sua senha`);
+    while (user == password){
+        user = prompt(`Insira o seu nome do usuario`);
+        password = prompt(`Insira a sua senha. A senha não pode ser igual ao nome de usuario`)
+    }
+    console.log("aprovado")
 
 
     //Processamento
