--- a/01_nota0-10.html
+++ b/01_nota0-10.html
@@ -10,8 +10,8 @@
     let nota = Number(prompt(`Insira uma nota de 0 a 10:`));
     while (nota >= 0 || nota <= 10){
         nota = Number(prompt(`Insira uma nota de 0 a 10!!`));
-    }
-    console.log("aprovado")
+    };
+    console.log("aprovado");
     //Processamento
 
 
