--- a/02_usuarioSenha.html
+++ b/02_usuarioSenha.html
@@ -10,8 +10,8 @@
     let password = prompt(`Insira a sua senha`);
     while (user == password){
         user = prompt(`Insira o seu nome do usuario`);
-        password = prompt(`Insira a sua senha. A senha não pode ser igual ao nome de usuario`)
-    }
+        password = prompt(`Insira a sua senha. A senha não pode ser igual ao nome de usuario`);
+    };
     console.log("aprovado")
 
 
