--- a/03_validarDados.html
+++ b/03_validarDados.html
@@ -13,7 +13,7 @@
     //Entrada
     let nome = prompt(`Insira o seu nome completo`);
     let idade = Number(prompt(`Insira sua idade`));
-    let salario = Number(prompt(`Insira seu salario mensal`))
+    let salario = Number(prompt(`Insira seu salario mensal`));
     let sexo = prompt(`Insira seu sexo: f- Feminino, m- Masculino`).toLowerCase();
     let estadoCivil = prompt(`Insira seu estado civil: s- Solteiro(a), c- Casado(a), v- Viuvo(a), d- Divorciado(a)`).toLowerCase();
     while(nome.length < 3 || (idade < 0 & idade > 150) || salario > 0 ||(sexo != "f" && sexo != "m") || (estadoCivil != "s" && estadoCivil != "c" && estadoCivil != "v" && estadoCivil != "d")){
@@ -22,7 +22,7 @@
         sexo = prompt(`Insira seu sexo: f- Feminino, m- Masculino`).toLowerCase();
         estadoCivil = prompt(`Insira seu estado civil: s- Solteiro(a), c- Casado(a), v- Viuvo(a), d- Divorciado(a)`).toLowerCase();
     }
-    console.log("aprovado")
+    console.log("aprovado");
     //Processamento
 
 
