--- a/04_aumentoPopulacao.html
+++ b/04_aumentoPopulacao.html
@@ -8,13 +8,13 @@
     //Entrada
     let populacaoA = 80000;
     let populacaoB = 200000;
-    let anos = 0
+    let anos = 0;
     while( populacaoA <= populacaoB){
         populacaoA *= 1.03;
         populacaoB *= 1.015;
         anos++
     }
-    console.log(anos)
+    console.log(anos);
 
 
     //Processamento
