--- a/02_usuarioSenha.html
+++ b/02_usuarioSenha.html
@@ -6,18 +6,16 @@
     */
 
     //Entrada
-    let user = prompt(`Insira o seu nome de usuario`);
-    let password = prompt(`Insira a sua senha`);
-    while (user == password){
-        user = prompt(`Insira o seu nome do usuario`);
-        password = prompt(`Insira a sua senha. A senha não pode ser igual ao nome de usuario`);
-    };
-    console.log("aprovado")
-
+    let usuario = prompt(`Insira o seu usuário:`);
+    let senha = prompt(`Insira a sua senha:`);
 
     //Processamento
-
+    while (usuario == senha) {
+        usuario = prompt(`Insira o seu nome do usuario`);
+        senha = prompt(`Insira a sua senha. A senha não pode ser igual ao nome de usuario`);
+    };
 
     //Saída
+    document.write(`Login bem-sucedido!`);
 
 </script>
